Added request client

--- a/ApiWrapper/ApiWrapper.vcxproj.filters
+++ b/ApiWrapper/ApiWrapper.vcxproj.filters
@@ -21,12 +21,30 @@
     <ClInclude Include="OverrideColorClient.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LightEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Statics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ApiResponse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RequestClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OverrideColorClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Color.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LightEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RequestClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
