--- a/ApiWrapper/ApiWrapper.vcxproj
+++ b/ApiWrapper/ApiWrapper.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{3AD98457-0F6F-4B3C-9E0A-F5FFEEE33DB7}</ProjectGuid>
     <RootNamespace>ApiWrapper</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -112,12 +112,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ApiResponse.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="LightEffect.h" />
+    <ClInclude Include="RequestClient.h" />
     <ClInclude Include="OverrideColorClient.h" />
+    <ClInclude Include="Statics.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="LightEffect.cpp" />
     <ClCompile Include="OverrideColorClient.cpp" />
+    <ClCompile Include="RequestClient.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
