--- a/FruitSalad/FruitSalad.vcxproj.filters
+++ b/FruitSalad/FruitSalad.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="Audio\WavetoColorStrategy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Gw2\Gw2BossNotifier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Gw2\EvtcParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Audio\AudioVisualizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Audio\WavetoColorStrategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Gw2\Gw2BossNotifier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Gw2\EvtcParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
