--- a/FruitSalad/FruitSalad.vcxproj.filters
+++ b/FruitSalad/FruitSalad.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Profiles\ProfileManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HotkeyManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gw2\Gw2BossNotifier.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Audio\RingBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HotkeyManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
