--- a/AudioCapture/AudioCapture.vcxproj.filters
+++ b/AudioCapture/AudioCapture.vcxproj.filters
@@ -18,7 +18,13 @@
     <ClCompile Include="AudioMonitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WaveToIntensityStrategy.cpp">
+    <ClCompile Include="dsp\ExpFilter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WaveHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WaveToIntensityConverter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +35,13 @@
     <ClInclude Include="RingBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WaveToIntensityStrategy.h">
+    <ClInclude Include="dsp\ExpFilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WaveHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WaveToIntensityConverter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
