--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/Debug/FruitSalad.exe",
+            "program": "${workspaceFolder}/Debug/win-rt-rgb.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
