Fix compilations issues and mem leaks

--- a/Rendering/Rendering.vcxproj.filters
+++ b/Rendering/Rendering.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="RenderTarget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WledRenderOutput.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RenderOutput.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RenderTarget.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WledRenderOutput.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
