Output desktop colors to wled

--- a/win-rt-rgb/win-rt-rgb.vcxproj.filters
+++ b/win-rt-rgb/win-rt-rgb.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="HotkeyManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
