Add support for setting wled power status
Added a class for sending http requests to wled. This can be expanded to support other functionality.

--- a/win-rt-rgb/win-rt-rgb.vcxproj.filters
+++ b/win-rt-rgb/win-rt-rgb.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="HotkeyManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WledHttpClient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WledHttpClient.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
