Allow output to multiple wled devices
A SamplingSpecifications struct tells the desktop capturing project
how to sample the screen (e.g. how many leds to output for).
Specfying multiple specifications give multiple results per frame.

--- a/win-rt-rgb/DesktopCapture/DesktopCapture.vcxproj
+++ b/win-rt-rgb/DesktopCapture/DesktopCapture.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="DesktopColorSampler.h" />
     <ClInclude Include="DesktopDuplicator.h" />
     <ClInclude Include="Rect.h" />
+    <ClInclude Include="SamplingSpecification.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="CUDA\CudaKernels.cu" />
